update the check orderLineItem stock logic in placeOrder service method